Fix volume and starting dir
* Set starting directory to ros[2]_ws in
docker images for convenience

* Mount volume /tmp/.X11-unix on linux
hosts for display purposes

* Set environment variable XAUTHORITY
instead of XAUTH, and remove unneeded
XAUTH volume mounting in server

--- a/ros2_ws/Dockerfile
+++ b/ros2_ws/Dockerfile
@@ -74,7 +74,7 @@ RUN echo "source /opt/ros/${ROS_DISTRO}/setup.bash; \
 source /home/${USER}/ros2_ws/install/setup.bash" | cat - ${HOME}/.bashrc > tmp && mv tmp ${HOME}/.bashrc
 RUN echo "session required pam_limits.so" | sudo tee --append /etc/pam.d/common-session > /dev/null
 
-WORKDIR ${HOME}
+WORKDIR ${HOME}/ros2_ws
 
 # Clean image
 RUN sudo apt-get clean && sudo rm -rf /var/lib/apt/lists/*
