--- a/ros_ws/Dockerfile
+++ b/ros_ws/Dockerfile
@@ -47,7 +47,7 @@ FROM base-dependencies as base-workspace
 ENV USER ros
 ENV HOME /home/${USER}
 
-# create amd configure a new user
+# create and configure a new user
 ARG UID=1000
 ARG GID=1000
 RUN addgroup --gid ${GID} ${USER}
