--- a/.github/workflows/build-push.yml
+++ b/.github/workflows/build-push.yml
@@ -4,7 +4,7 @@ name: Build and Push
 on:
   push:
     branches:
-      - master
+      - main
   workflow_dispatch:
 
 jobs:
@@ -20,7 +20,7 @@ jobs:
         uses: ./.github/actions/build-push
         with:
           image: aica-technology/ros-ws:noetic
-          secret: ${{ secrets.CR_PAT }}
+          secret: ${{ secrets.GITHUB_TOKEN }}
 
   build-publish-foxy:
     runs-on: ubuntu-latest
@@ -33,4 +33,4 @@ jobs:
         uses: ./.github/actions/build-push
         with:
           image: aica-technology/ros2-ws:foxy
-          secret: ${{ secrets.CR_PAT }}
+          secret: ${{ secrets.GITHUB_TOKEN }}
