--- a/ros_ws/Dockerfile
+++ b/ros_ws/Dockerfile
@@ -16,6 +16,7 @@ RUN apt-get update && apt-get install -y \
   libssl-dev \
   make \
   mesa-utils \
+  nano \
   python3-setuptools \
   python3-pip \
   python3-rosdep \
