--- a/.github/actions/build-push-combined/action.yml
+++ b/.github/actions/build-push-combined/action.yml
@@ -1,10 +1,14 @@
-name: 'Build and Push'
+name: 'Build and Push Combined'
 description: 'Build the Docker image and push to GitHub Container Registry'
 inputs:
   image:
     description: 'The desired image'
     required: false
-    default: 'aica-technology/ros2-ws:foxy'
+    default: 'aica-technology/cl-ros2-ws:foxy'
+  cl_branch:
+    description: 'The branch of control libraries'
+    required: false
+    default: 'main'
   secret:
     description: 'GitHub Container Registry secret'
     required: true
@@ -16,12 +20,13 @@ runs:
       run: |
         IMAGE_NAME=${{ inputs.image }}
         IMAGE_ID=${IMAGE_NAME%:*}
-        ROS_DISTRO=${IMAGE_NAME#*:}
+        ROS_VERSION=${IMAGE_NAME#*:}
         WORKSPACE=${IMAGE_ID#*/}
         WORKSPACE=${WORKSPACE//[-]/_}
+        echo $WORKSPACE
         mkdir -p ${WORKSPACE}/config
         cp common/sshd_entrypoint.sh ${WORKSPACE}/config/
-        docker build ${WORKSPACE} --file ${WORKSPACE}/Dockerfile  --build-arg ROS_DISTRO=${ROS_DISTRO} --tag ${IMAGE_ID}
+        docker build ${WORKSPACE} --file ${WORKSPACE}/Dockerfile  --build-arg ROS_VERSION=${ROS_VERSION} --build-arg CL_BRANCH=${{ inputs.cl_branch }} --tag ${IMAGE_ID}
       shell: bash
 
     - name: Login to GitHub Container Registry
@@ -31,7 +36,9 @@ runs:
     - name: Push image
       run: |
         IMAGE_NAME=${{ inputs.image }}
+        echo $IMAGE_NAME
         IMAGE_ID=${IMAGE_NAME%:*}
+        echo $IMAGE_ID
         docker tag ${IMAGE_ID} ghcr.io/${IMAGE_NAME}
         docker push ghcr.io/${IMAGE_NAME}
       shell: bash
