--- a/.github/workflows/build-push.yml
+++ b/.github/workflows/build-push.yml
@@ -19,7 +19,7 @@ jobs:
       - name: Build and Push
         uses: ./.github/actions/build-push
         with:
-          image: domire8/ros-ws:noetic
+          image: aica-technology/ros-ws:noetic
           secret: ${{ secrets.GITHUB_TOKEN }}
 
   build-publish-noetic-cl:
@@ -46,7 +46,7 @@ jobs:
       - name: Build and Push
         uses: ./.github/actions/build-push
         with:
-          image: domire8/ros2-ws:foxy
+          image: aica-technology/ros2-ws:foxy
           secret: ${{ secrets.GITHUB_TOKEN }}
 
 
