--- a/.github/actions/build-push/action.yml
+++ b/.github/actions/build-push/action.yml
@@ -5,6 +5,10 @@ inputs:
     description: 'The desired image'
     required: false
     default: 'aica-technology/ros2-ws:foxy'
+  cl_branch:
+    description: 'The branch of control libraries'
+    required: false
+    default: 'main'
   secret:
     description: 'GitHub Container Registry secret'
     required: true
@@ -16,12 +20,12 @@ runs:
       run: |
         IMAGE_NAME=${{ inputs.image }}
         IMAGE_ID=${IMAGE_NAME%:*}
-        ROS_DISTRO=${IMAGE_NAME#*:}
+        ROS_VERSION=${IMAGE_NAME#*:}
         WORKSPACE=${IMAGE_ID#*/}
         WORKSPACE=${WORKSPACE//[-]/_}
         mkdir -p ${WORKSPACE}/config
         cp common/sshd_entrypoint.sh ${WORKSPACE}/config/
-        docker build ${WORKSPACE} --file ${WORKSPACE}/Dockerfile  --build-arg ROS_DISTRO=${ROS_DISTRO} --tag ${IMAGE_ID}
+        docker build ${WORKSPACE} --file ${WORKSPACE}/Dockerfile  --build-arg ROS_VERSION=${ROS_VERSION} --build-arg CL_BRANCH=${{ inputs.cl_branch }} --tag ${IMAGE_ID}
       shell: bash
 
     - name: Login to GitHub Container Registry
