--- a/.github/workflows/build-push.yml
+++ b/.github/workflows/build-push.yml
@@ -1,6 +1,6 @@
 name: Build and Push
 
-# Run workflow on pushes to master branch or by manual dispatch
+# Run workflow on pushes to main branch or by manual dispatch
 on:
   push:
     branches:
@@ -22,20 +22,6 @@ jobs:
           image: aica-technology/ros-ws:noetic
           secret: ${{ secrets.GITHUB_TOKEN }}
 
-  build-publish-noetic-cl:
-    runs-on: ubuntu-latest
-    name: Build and publish ROS noetic workspace image with control libraries installed
-    steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v2
-
-      - name: Build and Push Combined
-        uses: ./.github/actions/build-push-combined
-        with:
-          image: aica-technology/cl-ros-ws:noetic
-          cl_branch: fix/revise-install
-          secret: ${{ secrets.GITHUB_TOKEN }}
-
   build-publish-foxy-workspace:
     runs-on: ubuntu-latest
     name: Build and publish ROS2 foxy workspace image
@@ -49,17 +35,32 @@ jobs:
           image: aica-technology/ros2-ws:foxy
           secret: ${{ secrets.GITHUB_TOKEN }}
 
+  build-publish-noetic-cl:
+    needs: build-publish-noetic-workspace
+    runs-on: ubuntu-latest
+    name: Build and publish ROS noetic workspace image with control libraries installed
+    steps:
+      - name: Checkout Repository
+        uses: actions/checkout@v2
+
+      - name: Build and Push
+        uses: ./.github/actions/build-push
+        with:
+          image: aica-technology/cl-ros-ws:noetic
+          cl_branch: develop
+          secret: ${{ secrets.GITHUB_TOKEN }}
 
   build-publish-foxy-cl:
+    needs: build-publish-foxy-workspace
     runs-on: ubuntu-latest
     name: Build and publish ROS2 foxy workspace image with control libraries installed
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v2
 
-      - name: Build and Push Combined
-        uses: ./.github/actions/build-push-combined
+      - name: Build and Push
+        uses: ./.github/actions/build-push
         with:
           image: aica-technology/cl-ros2-ws:foxy
-          cl_branch: fix/revise-install
+          cl_branch: develop
           secret: ${{ secrets.GITHUB_TOKEN }}
