Rename directories and change control-libraries

--- a/ros_control_libraries/Dockerfile
+++ b/ros_control_libraries/Dockerfile
@@ -1,5 +1,5 @@
-ARG BASE_IMAGE=ghcr.io/aica-technology/ros2-ws
-ARG ROS_VERSION=foxy
+ARG BASE_IMAGE=ghcr.io/aica-technology/ros-ws
+ARG ROS_VERSION=noetic
 FROM ${BASE_IMAGE}:${ROS_VERSION}
 
 # install google dependencies
@@ -10,15 +10,15 @@ RUN sudo ldconfig
 
 ARG CL_BRANCH=main
 WORKDIR ${HOME}
-RUN git clone -b ${CL_BRANCH} --single-branch https://github.com/epfl-lasa/control_libraries.git
+RUN git clone -b ${CL_BRANCH} --single-branch https://github.com/epfl-lasa/control-libraries.git
 
 # install source
-RUN sudo ./control_libraries/source/install.sh -y
+RUN sudo ./control-libraries/source/install.sh -y
 # install protocol
-RUN sudo ./control_libraries/protocol/install.sh -y
+RUN sudo ./control-libraries/protocol/install.sh -y
 # install python bindings
-RUN sudo pip3 install ./control_libraries/python
+RUN sudo pip3 install ./control-libraries/python
 # remove files except protocol
-RUN mv ./control_libraries/protocol ./protocol && rm -rf ./control_libraries/* && mv ./protocol ./control_libraries/protocol
+RUN mv ./control-libraries/protocol ./protocol && rm -rf ./control-libraries/* && mv ./protocol ./control-libraries/protocol
 
 RUN sudo apt-get clean && sudo rm -rf /var/lib/apt/lists/*
