--- a/.github/workflows/manual-dispatch.yml
+++ b/.github/workflows/manual-dispatch.yml
@@ -10,13 +10,12 @@ on:
       cl_branch:
         description: 'If set, the desired branch of control libraries for the combined image'
         required: false
-        default: ''
+        default: 'develop'
 
 jobs:
   build-publish:
-    if: ${{ github.event.inputs.cl_branch == '' }}
     runs-on: ubuntu-latest
-    name: Build and publish ROS workspace image
+    name: Build and publish image
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v2
