--- a/.github/workflows/build-push.yml
+++ b/.github/workflows/build-push.yml
@@ -1,6 +1,6 @@
 name: Build and Push
 
-# Run workflow on pushes to master branch or by manual dispatch
+# Run workflow on pushes to main branch or by manual dispatch
 on:
   push:
     branches:
@@ -9,9 +9,9 @@ on:
 
 jobs:
 
-  build-publish-noetic:
+  build-publish-noetic-workspace:
     runs-on: ubuntu-latest
-    name: Build and publish ROS noetic image
+    name: Build and publish ROS noetic workspace image
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v2
@@ -22,9 +22,9 @@ jobs:
           image: aica-technology/ros-ws:noetic
           secret: ${{ secrets.GITHUB_TOKEN }}
 
-  build-publish-foxy:
+  build-publish-foxy-workspace:
     runs-on: ubuntu-latest
-    name: Build and publish ROS2 foxy image
+    name: Build and publish ROS2 foxy workspace image
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v2
@@ -33,4 +33,34 @@ jobs:
         uses: ./.github/actions/build-push
         with:
           image: aica-technology/ros2-ws:foxy
+          secret: ${{ secrets.GITHUB_TOKEN }}
+
+  build-publish-noetic-control-libraries:
+    needs: build-publish-noetic-workspace
+    runs-on: ubuntu-latest
+    name: Build and publish ROS noetic workspace image with control libraries installed
+    steps:
+      - name: Checkout Repository
+        uses: actions/checkout@v2
+
+      - name: Build and Push
+        uses: ./.github/actions/build-push
+        with:
+          image: aica-technology/ros-control-libraries:noetic
+          cl_branch: develop
+          secret: ${{ secrets.GITHUB_TOKEN }}
+
+  build-publish-foxy-control-libraries:
+    needs: build-publish-foxy-workspace
+    runs-on: ubuntu-latest
+    name: Build and publish ROS2 foxy workspace image with control libraries installed
+    steps:
+      - name: Checkout Repository
+        uses: actions/checkout@v2
+
+      - name: Build and Push
+        uses: ./.github/actions/build-push
+        with:
+          image: aica-technology/ros2-control-libraries:foxy
+          cl_branch: develop
           secret: ${{ secrets.GITHUB_TOKEN }}
