Add robot-state-publisher to base images

--- a/ros2_ws/Dockerfile
+++ b/ros2_ws/Dockerfile
@@ -18,6 +18,7 @@ RUN apt-get update && apt-get install -y \
   nano \
   python3-pip \
   ros-${ROS_DISTRO}-xacro \
+  ros-${ROS_DISTRO}-robot-state-publisher \
   ros-${ROS_DISTRO}-rviz2 \
   rsync \
   software-properties-common \
