--- a/ros_ws/Dockerfile
+++ b/ros_ws/Dockerfile
@@ -14,6 +14,7 @@ RUN apt-get update && apt-get install -y \
   python3-pip \
   python3-rosinstall-generator \
   ros-${ROS_DISTRO}-xacro \
+  ros-${ROS_DISTRO}-robot-state-publisher \
   ros-${ROS_DISTRO}-rviz \
   rsync \
   software-properties-common \
