Update workflows with repository owner variable

--- a/.github/workflows/build-push.yml
+++ b/.github/workflows/build-push.yml
@@ -1,6 +1,6 @@
 name: Build and Push
 
-# Run workflow on pushes to main branch or by manual dispatch
+# Run workflow on pushes to main branch
 on:
   push:
     branches:
@@ -13,26 +13,26 @@ jobs:
     runs-on: ubuntu-latest
     name: Build and publish ROS noetic workspace image
     steps:
-      - name: Checkout Repository
+      - name: Checkout repository
         uses: actions/checkout@v2
 
       - name: Build and Push
         uses: ./.github/actions/build-push
         with:
-          image: aica-technology/ros-ws:noetic
+          image: ros-ws:noetic
           secret: ${{ secrets.GITHUB_TOKEN }}
 
   build-publish-foxy-workspace:
     runs-on: ubuntu-latest
     name: Build and publish ROS2 foxy workspace image
     steps:
-      - name: Checkout Repository
+      - name: Checkout repository
         uses: actions/checkout@v2
 
       - name: Build and Push
         uses: ./.github/actions/build-push
         with:
-          image: aica-technology/ros2-ws:foxy
+          image: ros2-ws:foxy
           secret: ${{ secrets.GITHUB_TOKEN }}
 
   build-publish-noetic-control-libraries:
@@ -40,13 +40,13 @@ jobs:
     runs-on: ubuntu-latest
     name: Build and publish ROS noetic workspace image with control libraries installed
     steps:
-      - name: Checkout Repository
+      - name: Checkout repository
         uses: actions/checkout@v2
 
       - name: Build and Push
         uses: ./.github/actions/build-push
         with:
-          image: aica-technology/ros-control-libraries:noetic
+          image: ros-control-libraries:noetic
           cl_branch: develop
           secret: ${{ secrets.GITHUB_TOKEN }}
 
@@ -55,12 +55,12 @@ jobs:
     runs-on: ubuntu-latest
     name: Build and publish ROS2 foxy workspace image with control libraries installed
     steps:
-      - name: Checkout Repository
+      - name: Checkout repository
         uses: actions/checkout@v2
 
       - name: Build and Push
         uses: ./.github/actions/build-push
         with:
-          image: aica-technology/ros2-control-libraries:foxy
+          image: ros2-control-libraries:foxy
           cl_branch: develop
           secret: ${{ secrets.GITHUB_TOKEN }}
