--- a/.github/actions/build-push/action.yml
+++ b/.github/actions/build-push/action.yml
@@ -4,7 +4,7 @@ inputs:
   image:
     description: 'The desired image'
     required: false
-    default: 'aica-technology/ros2-ws:foxy'
+    default: 'ros2-ws:foxy'
   cl_branch:
     description: 'The branch of control libraries'
     required: false
@@ -19,13 +19,12 @@ runs:
     - name: Build image
       run: |
         IMAGE_NAME=${{ inputs.image }}
-        IMAGE_ID=${IMAGE_NAME%:*}
         ROS_VERSION=${IMAGE_NAME#*:}
-        WORKSPACE=${IMAGE_ID#*/}
+        WORKSPACE=${IMAGE_NAME%:*}
         WORKSPACE=${WORKSPACE//[-]/_}
         mkdir -p ${WORKSPACE}/config
         cp common/sshd_entrypoint.sh ${WORKSPACE}/config/
-        docker build ${WORKSPACE} --file ${WORKSPACE}/Dockerfile  --build-arg ROS_VERSION=${ROS_VERSION} --build-arg CL_BRANCH=${{ inputs.cl_branch }} --tag ${IMAGE_ID}
+        docker build ${WORKSPACE} --file ${WORKSPACE}/Dockerfile  --build-arg ROS_VERSION=${ROS_VERSION} --build-arg CL_BRANCH=${{ inputs.cl_branch }} --tag ${IMAGE_NAME}
       shell: bash
 
     - name: Login to GitHub Container Registry
@@ -35,7 +34,6 @@ runs:
     - name: Push image
       run: |
         IMAGE_NAME=${{ inputs.image }}
-        IMAGE_ID=${IMAGE_NAME%:*}
-        docker tag ${IMAGE_ID} ghcr.io/${IMAGE_NAME}
-        docker push ghcr.io/${IMAGE_NAME}
+        docker tag ${IMAGE_NAME} ghcr.io/${{ github.repository_owner }}/${IMAGE_NAME}
+        docker push ghcr.io/${{ github.repository_owner }}/${IMAGE_NAME}
       shell: bash
