--- a/.github/actions/build-push/action.yml
+++ b/.github/actions/build-push/action.yml
@@ -9,6 +9,10 @@ inputs:
     description: 'The branch of control libraries'
     required: false
     default: 'main'
+  modulo_branch:
+    description: 'The branch of modulo'
+    required: false
+    default: 'main'
   secret:
     description: 'GitHub Container Registry secret'
     required: true
@@ -24,7 +28,11 @@ runs:
         WORKSPACE=${WORKSPACE//[-]/_}
         mkdir -p ${WORKSPACE}/config
         cp common/sshd_entrypoint.sh ${WORKSPACE}/config/
-        docker build ${WORKSPACE} --file ${WORKSPACE}/Dockerfile  --build-arg ROS_VERSION=${ROS_VERSION} --build-arg CL_BRANCH=${{ inputs.cl_branch }} --tag ${IMAGE_NAME}
+        docker build ${WORKSPACE} --file ${WORKSPACE}/Dockerfile \
+          --build-arg ROS_VERSION=${ROS_VERSION} \
+          --build-arg CL_BRANCH=${{ inputs.cl_branch }} \
+          --build-arg MODULO_BRANCH=${{ inputs.modulo_branch }} \
+          --tag ${IMAGE_NAME}
       shell: bash
 
     - name: Login to GitHub Container Registry
