Use ROS_DISTRO variable instead of ARG
* ARG gets consumed after a FROM statement, so ROS_VERSION was
undefined. Use ROS_DISTRO environment variable instead, which
is set by the base image

--- a/ros2_modulo/Dockerfile
+++ b/ros2_modulo/Dockerfile
@@ -10,6 +10,6 @@ RUN git clone -b ${MODULO_BRANCH} --single-branch https://github.com/epfl-lasa/m
 RUN cp -r /tmp/modulo/source/ ${HOME}/ros2_ws/src
 
 WORKDIR ${HOME}/ros2_ws
-RUN su ${USER} -c /bin/bash -c "source /opt/ros/${ROS_VERSION}/setup.bash; colcon build"
+RUN su ${USER} -c /bin/bash -c "source /opt/ros/${ROS_DISTRO}/setup.bash; colcon build"
 
 RUN rm -rf /tmp/*
