--- a/ros2_modulo_control/Dockerfile
+++ b/ros2_modulo_control/Dockerfile
@@ -3,7 +3,7 @@ ARG ROS_VERSION=foxy
 FROM ${BASE_IMAGE}:${ROS_VERSION}
 
 RUN sudo apt-get update && sudo apt-get install -y \
-  ros-${ROS_VERSION}-ros2-control \
-  ros-${ROS_VERSION}-ros2-controllers \
+  ros-${ROS_DISTRO}-ros2-control \
+  ros-${ROS_DISTRO}-ros2-controllers \
   && sudo ldconfig \
   && sudo rm -rf /var/lib/apt/lists/*
