--- a/ros_ws/Dockerfile
+++ b/ros_ws/Dockerfile
@@ -4,6 +4,7 @@ ENV DEBIAN_FRONTEND=noninteractive
 
 RUN apt-get update && apt-get install -y \
   curl \
+  featherpad \
   gdb \
   git \
   iputils-ping \
