--- a/ros_ws/Dockerfile
+++ b/ros_ws/Dockerfile
@@ -37,6 +37,7 @@ RUN ( \
 FROM base-dependencies as base-workspace
 ENV USER ros
 ENV HOME /home/${USER}
+ENV ROS_WORKSPACE /home/${USER}/ros_ws
 
 # create and configure a new user
 ARG UID=1000
@@ -54,27 +55,24 @@ RUN chmod 744 /sshd_entrypoint.sh
 
 # build ROS workspace
 USER ${USER}
-RUN mkdir -p ${HOME}/ros_ws/src
-WORKDIR ${HOME}/ros_ws/
+RUN mkdir -p ${ROS_WORKSPACE}/src
+WORKDIR ${ROS_WORKSPACE}
 RUN rosdep update
 ENV LD_LIBRARY_PATH=$LD_LIBRARY_PATH:/usr/local/lib
 RUN /bin/bash -c "source /opt/ros/${ROS_DISTRO}/setup.bash; catkin_make"
 
-# set up environment
-USER root
-
 # create the credentials to be able to pull private repos using ssh
+USER root
 RUN mkdir /root/.ssh/ && ssh-keyscan github.com | tee -a /root/.ssh/known_hosts
 
 # prepend the environment sourcing to bashrc (appending will fail for non-interactive sessions)
 RUN echo "source /opt/ros/${ROS_DISTRO}/setup.bash; \
-source /home/${USER}/ros_ws/devel/setup.bash" | cat - ${HOME}/.bashrc > tmp && mv tmp ${HOME}/.bashrc
+source ${ROS_WORKSPACE}/devel/setup.bash" | cat - ${HOME}/.bashrc > tmp && mv tmp ${HOME}/.bashrc
 RUN echo "session required pam_limits.so" | tee --append /etc/pam.d/common-session > /dev/null
 
-WORKDIR ${HOME}/ros_ws
+# start as ROS user
+USER ${USER}
+WORKDIR ${ROS_WORKSPACE}
 
 # Clean image
-RUN apt-get clean && rm -rf /var/lib/apt/lists/*
-
-# start as the user on default login unless the CMD is overridden.
-CMD su --login ${USER}
+RUN sudo apt-get clean && sudo rm -rf /var/lib/apt/lists/*
