--- a/.github/workflows/check-upstream.yml
+++ b/.github/workflows/check-upstream.yml
@@ -62,10 +62,17 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v2
 
-      - name: Build new ros2-control-libraries image
+      - name: Build new ros2-control-libraries foxy image
         uses: ./.github/actions/build-push
         with:
           image: ros2-control-libraries:foxy
+          cl_branch: develop
+          secret: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Build new ros2-control-libraries galactic image
+        uses: ./.github/actions/build-push
+        with:
+          image: ros2-control-libraries:galactic
           cl_branch: develop
           secret: ${{ secrets.GITHUB_TOKEN }}
 
@@ -80,17 +87,30 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v2
 
-      - name: Build new ros2-modulo image
+      - name: Build new ros2-modulo foxy image
         uses: ./.github/actions/build-push
         with:
           image: ros2-modulo:foxy
           modulo_branch: develop
           secret: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Build new ros2-modulo-control image
+      - name: Build new ros2-modulo galactic image
+        uses: ./.github/actions/build-push
+        with:
+          image: ros2-modulo:galactic
+          modulo_branch: develop
+          secret: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Build new ros2-modulo-control foxy image
         uses: ./.github/actions/build-push
         with:
           image: ros2-modulo-control:foxy
+          secret: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Build new ros2-modulo-control galactic image
+        uses: ./.github/actions/build-push
+        with:
+          image: ros2-modulo-control:galactic
           secret: ${{ secrets.GITHUB_TOKEN }}
 
   write-hash:
