Add option to build ROS2 modulo control image with galactic (#24)
* Work in progress

* Improve single branch cloning syntax

* Improve workspace and user propagation

* Begin split logic for ros2_modulo_control galactic installations

* Fix Dockerfile

* Restructure Dockerfile for build without buildkit

* Fixes

* Keep docker buildkit

Co-authored-by: Baptiste Busch <baptiste.busch@gmail.com>

* Add galactic to CI pipelines

* feat: pass the ROS_DOMAIN_ID environment variable at runtime

* Set 14 as default ROS_DOMAIN_ID

* Apply suggestions from code review

Co-authored-by: Enrico Eberhard <32450951+eeberhard@users.noreply.github.com>

Co-authored-by: Enrico Eberhard <enrico.eberhard@gmail.com>
Co-authored-by: Baptiste Busch <baptiste.busch@gmail.com>
Co-authored-by: Enrico Eberhard <32450951+eeberhard@users.noreply.github.com>

--- a/ros2_ws/Dockerfile
+++ b/ros2_ws/Dockerfile
@@ -38,6 +38,7 @@ RUN ( \
 FROM base-dependencies as base-workspace
 ENV USER ros2
 ENV HOME /home/${USER}
+ENV ROS2_WORKSPACE /home/${USER}/ros2_ws
 
 # create amd configure a new user
 ARG UID=1000
@@ -55,27 +56,24 @@ RUN chmod 744 /sshd_entrypoint.sh
 
 # build ROS workspace
 USER ${USER}
-RUN mkdir -p ${HOME}/ros2_ws/src
-WORKDIR ${HOME}/ros2_ws/
+RUN mkdir -p ${ROS2_WORKSPACE}/src
+WORKDIR ${ROS2_WORKSPACE}
 RUN rosdep update
 ENV LD_LIBRARY_PATH=$LD_LIBRARY_PATH:/usr/local/lib
 RUN /bin/bash -c "source /opt/ros/${ROS_DISTRO}/setup.bash; colcon build --symlink-install"
 
-# set up environment
-USER root
-
 # create the credentials to be able to pull private repos using ssh
+USER root
 RUN mkdir /root/.ssh/ && ssh-keyscan github.com | tee -a /root/.ssh/known_hosts
 
 # prepend the environment sourcing to bashrc (appending will fail for non-interactive sessions)
 RUN echo "source /opt/ros/${ROS_DISTRO}/setup.bash; \
-source /home/${USER}/ros2_ws/install/setup.bash" | cat - ${HOME}/.bashrc > tmp && mv tmp ${HOME}/.bashrc
+source ${ROS2_WORKSPACE}/install/setup.bash" | cat - ${HOME}/.bashrc > tmp && mv tmp ${HOME}/.bashrc
 RUN echo "session required pam_limits.so" | tee --append /etc/pam.d/common-session > /dev/null
 
-WORKDIR ${HOME}/ros2_ws
+# start as ROS user
+USER ${USER}
+WORKDIR ${ROS2_WORKSPACE}
 
 # Clean image
-RUN apt-get clean && rm -rf /var/lib/apt/lists/*
-
-# start as the user on default login unless the CMD is overridden.
-CMD su --login ${USER}
+RUN sudo apt-get clean && sudo rm -rf /var/lib/apt/lists/*
