Install catkin-pkg
* Explicitly install the catkin packages for
the python3 interpreter. When installing python3 from source as the 
default system interpreter, the catkin-pkg module cannot be found by 
ament_cmake, which is invoked during colcon build. This naturally caused 
all downstream ROS2 workspace builds to fail.

--- a/ros2_ws/Dockerfile
+++ b/ros2_ws/Dockerfile
@@ -58,6 +58,8 @@ RUN sudo ./configure --enable-optimizations --with-ensurepip=install \
   && sudo make -j8 \
   && sudo make install
 
+RUN python3 -m pip install catkin_pkg
+
 
 FROM python3-install as base-workspace
 ENV USER ros2
